# relational_reasoning

./: .gitignore  LICENSE  README.md  analyse_icl.ipynb  analyse_max_tokens.ipynb  pyproject.toml
REL/algebra/: REL-A1.jsonl  REL-A2.jsonl  REL-A3.jsonl  REL-A4.jsonl
REL/chemistry/: REL-C1.jsonl  REL-C2.jsonl  REL-C3.jsonl
algebra_benchmark/: README.md  build_benchmark.py  config_schema.py  create_dataset.py  create_example_datasets.py  evaluation.py  format.py  generators.py  loader.py  requirements.txt  rpm_numeric.py  run_eval.py  solver_pred.py  tasks.py  test_build_benchmark.py  test_evaluation.py
algebra_data/REL-A1/: config.yml  dataset.json
algebra_data/REL-A2/: config.yml  dataset.json
algebra_data/REL-A3/: config.yml  dataset.json
algebra_data/REL-A4/: config.yml  dataset.json
bio_benchmark/: README.md  build_benchmark.py  evaluation.py  generate_examples.py  prompt_generation.py  random_tree.py  run_examples.py  test_build_benchmark.py  test_evaluation.py  utils.py
bio_data/: rebuild_csv.sh
chem_benchmark/: README.md  build_benchmark.py  build_dataset.py  evaluation.py  generate_isomer_universes.py  isomer_sources.py  isomer_universes.json  llm_runner.py  molecule_bank.py  molecule_bank_chembl_xlarge.json  rdkit_utils.py  scaffold_families.py  solvers.py  tasks.py  test_build_benchmark.py  test_evaluation.py  update_q2_prompts.py
chem_data/: dataset_q2_balanced.jsonl  dataset_q3.jsonl
chem_data/_old/: dataset_combined.jsonl  dataset_n20.jsonl  dataset_n20_test.jsonl  dataset_q1_test.jsonl  (+1 more)
data/: dataset_q1a_fixed_smiles.jsonl
(+10 files in other folders)
